bug no scroll em PC

--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -2,6 +2,7 @@
   <app-header-name></app-header-name>
 
   <div class="section">
+    <div class="section-content">
     <h1 class="h1-title" i18n="Title">Anamnese</h1>
     <mat-accordion class="headers-align">
       <!-- Objectivos -->
@@ -793,5 +794,5 @@
 
     </mat-accordion>
   </div>
-
+</div>
 </div>
