--- a/src/app/avaliation/anamenese/anamenese.component.scss
+++ b/src/app/avaliation/anamenese/anamenese.component.scss
@@ -18,8 +18,9 @@
     flex-direction: column !important;
     justify-content: flex-start !important;
     align-items: center !important;
-
-
+    &-content{
+      width: 100%;
+    }
   }
 }
 
@@ -169,7 +170,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .section {
+  .section-content {
     width: 520px !important;
     h1 {
       width: 100%;
