--- a/src/app/avaliation/antropometria/mayhew-et-al/mayhew-et-al.component.scss
+++ b/src/app/avaliation/antropometria/mayhew-et-al/mayhew-et-al.component.scss
@@ -8,6 +8,9 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     width: 100%;
