--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
@@ -1,120 +1,141 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
-        <h1 class="h1-title" i18n>IC - Índice de Conicidade</h1>
-        <form class="section-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
-            <table class="section-table">
-                <thead>
-                    <tr>
-                        <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
-                            <button type="button">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</button></th>
-                        <th class="th-top" *ngIf="pointer>=0"><button type="button">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</button></th>
-                        <th class="th-top" *ngIf="addEval">
-                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th i18n><span (click)="openDialog('Altura')">Altura <small> (m)</small></span></th>
-                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].altura | number: '': locale}}</td>
-                        <td *ngIf="editPointer==1 && editAv">
-                            <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number" (focus)="$event.target.select()">
-                        </td>
-                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].altura | number: '': locale}}</td>
-                        <td *ngIf="editPointer==0 && editAv">
-                            <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number" (focus)="$event.target.select()">
-                        </td>
-                        <td *ngIf="addEval">
-                            <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number" style="width: 60px;">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openDialog('Peso')">Peso <small> (Kg)</small></span></th>
-                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].peso | number: '': locale}}</td>
-                        <td *ngIf="editPointer==1 && editAv">
-                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number" (focus)="$event.target.select()">
-                        </td>
-                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].peso | number: '': locale}}</td>
-                        <td *ngIf="editPointer==0 && editAv">
-                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number" (focus)="$event.target.select()">
-                        </td>
-                        <td *ngIf="addEval">
-                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number" style="width: 60px;">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openDialog('Cintura')">Cintura <small>(cm)</small></span></th>
-                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].cintura | number: '': locale}}</td>
-                        <td *ngIf="editPointer==1 && editAv">
-                            <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura" type="number" (focus)="$event.target.select()">
-                        </td>
-                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].cintura | number: '': locale}}</td>
-                        <td *ngIf="editPointer==0 && editAv">
-                            <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura" type="number" (focus)="$event.target.select()">
-                        </td>
-                        <td *ngIf="addEval">
-                            <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura" type="number" style="width: 60px;">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openDialog('IC')">IC</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{getIC(evaluation[pointer-1]) | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{getIC(evaluation[pointer]) | number: '': locale}}</td>
-                    </tr>
-                    <tr>
-                        <th i18n>Classificação*</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{getClasse(evaluation[pointer-1])}}</td>
-                        <td *ngIf="pointer>=0">{{getClasse(evaluation[pointer])}}</td>
-                    </tr>
-                    <tr>
-                        <th>Ações</th>
-                        <td *ngIf="pointer>=1 && !addEval">
-                            <app-edit-del-form *ngIf="(editPointer==1 && editAv) || !editAv"
-                                [dataAv]="evaluation[pointer-1].data"
-                                (action)="executeAction($event, evaluation[pointer-1], 1)"></app-edit-del-form>
-                        </td>
-                        <td *ngIf="pointer>=0 && !addEval">
-                            <app-edit-del-form *ngIf="(editPointer==0 && editAv) || !editAv"
-                                [dataAv]="evaluation[pointer].data"
-                                (action)="executeAction($event, evaluation[pointer], 0)"></app-edit-del-form>
-                        </td>
-                        <td *ngIf="addEval">&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td colspan="3"><small><em>*Pitanga & Lessa - IC como descriminador de risco coronário.</em></small></td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="section-content">
+            <h1 class="h1-title" i18n>IC - Índice de Conicidade</h1>
+            <form class="section-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+                <table class="section-table">
+                    <thead>
+                        <tr>
+                            <th>&nbsp;</th>
+                            <th class="th-top" *ngIf="pointer>=1 && !addEval">
+                                <button type="button">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</button></th>
+                            <th class="th-top" *ngIf="pointer>=0"><button
+                                    type="button">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</button></th>
+                            <th class="th-top" *ngIf="addEval">
+                                <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                    class="data-input">
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th i18n><span (click)="openDialog('Altura')">Altura <small> (m)</small></span></th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].altura | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number"
+                                    (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].altura | number: '': locale}}
+                            </td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number"
+                                    (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number"
+                                    style="width: 60px;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th i18n><span (click)="openDialog('Peso')">Peso <small> (Kg)</small></span></th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].peso | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
+                                    (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].peso | number: '': locale}}
+                            </td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
+                                    (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
+                                    style="width: 60px;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th i18n><span (click)="openDialog('Cintura')">Cintura <small>(cm)</small></span></th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].cintura | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">
+                                {{evaluation[pointer].cintura | number: '': locale}}</td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
+                                    type="number" style="width: 60px;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th i18n><span (click)="openDialog('IC')">IC</span></th>
+                            <td *ngIf="pointer>=1 && !addEval">{{getIC(evaluation[pointer-1]) | number: '': locale}}
+                            </td>
+                            <td *ngIf="pointer>=0">{{getIC(evaluation[pointer]) | number: '': locale}}</td>
+                        </tr>
+                        <tr>
+                            <th i18n>Classificação*</th>
+                            <td *ngIf="pointer>=1 && !addEval">{{getClasse(evaluation[pointer-1])}}</td>
+                            <td *ngIf="pointer>=0">{{getClasse(evaluation[pointer])}}</td>
+                        </tr>
+                        <tr>
+                            <th>Ações</th>
+                            <td *ngIf="pointer>=1 && !addEval">
+                                <app-edit-del-form *ngIf="(editPointer==1 && editAv) || !editAv"
+                                    [dataAv]="evaluation[pointer-1].data"
+                                    (action)="executeAction($event, evaluation[pointer-1], 1)"></app-edit-del-form>
+                            </td>
+                            <td *ngIf="pointer>=0 && !addEval">
+                                <app-edit-del-form *ngIf="(editPointer==0 && editAv) || !editAv"
+                                    [dataAv]="evaluation[pointer].data"
+                                    (action)="executeAction($event, evaluation[pointer], 0)"></app-edit-del-form>
+                            </td>
+                            <td *ngIf="addEval">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td colspan="3"><small><em>*Pitanga & Lessa - IC como descriminador de risco
+                                        coronário.</em></small></td>
+                        </tr>
+                    </tbody>
+                </table>
 
-            <div class="action">
-                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1 || editAv" mat-mini-fab color="default"
-                    (click)="pointer=pointer-1">
-                    <mat-icon class="mat-14">chevron_left</mat-icon>
-                </button>
-                <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv" (click)="addEvaluation()">
-                    <mat-icon class="mat-18">add</mat-icon>
-                </button>
-                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || editAv" mat-mini-fab color="default"
-                    (click)="pointer=pointer+1">
-                    <mat-icon class="mat-14">chevron_right</mat-icon>
-                </button>
-                <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
-                    <mat-icon class="mat-18">close</mat-icon>
-                </button>
-                <button *ngIf="addEval" mat-stroked-button>
-                    <mat-icon class="mat-18">check</mat-icon>
-                </button>
-            </div>
-        </form>
+                <div class="action">
+                    <button type="button" *ngIf="!addEval" [disabled]="pointer<=1 || editAv" mat-mini-fab
+                        color="default" (click)="pointer=pointer-1">
+                        <mat-icon class="mat-14">chevron_left</mat-icon>
+                    </button>
+                    <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
+                        (click)="addEvaluation()">
+                        <mat-icon class="mat-18">add</mat-icon>
+                    </button>
+                    <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || editAv" mat-mini-fab
+                        color="default" (click)="pointer=pointer+1">
+                        <mat-icon class="mat-14">chevron_right</mat-icon>
+                    </button>
+                    <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
+                        <mat-icon class="mat-18">close</mat-icon>
+                    </button>
+                    <button *ngIf="addEval" mat-stroked-button>
+                        <mat-icon class="mat-18">check</mat-icon>
+                    </button>
+                </div>
+            </form>
 
-        <div class="section-info">
-            <div class="section-info-image">
-                <img src="./assets/img/conicidade.png" alt="Indice Conicidade">
+            <div class="section-info">
+                <div class="section-info-image">
+                    <img src="./assets/img/conicidade.png" alt="Indice Conicidade">
+                </div>
             </div>
         </div>
-        
     </div>
 
 </div>
