--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
@@ -2,151 +2,155 @@
     <app-header-name></app-header-name>
 
     <div class="section">
-        <h1 class="h1-title" i18n>Índice de Relação Cintura/Quadril</h1>
-        <table class="section-table">
-            <thead>
-                <tr>
-                    <th>&nbsp;</th>
-                    <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</th>
-                    <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th i18n><span (click)="openDialog('Cintura')">Cintura <small>(cm)</small></span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].cintura | number: '': locale}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].cintura | number: '': locale}}</td>
-                </tr>
-                <tr>
-                    <th i18n><span (click)="openDialog('Quadril')">Quadril <small>(cm)</small></span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril | number: '': locale}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].quadril | number: '': locale}}</td>
-                </tr>
-                <tr>
-                    <th i18n><span (click)="openDialog('IRCQ')">IRCQ</span></th>
-                    <td *ngIf="pointer>=1">
-                        {{+evaluation[pointer-1].cintura / +evaluation[pointer-1].quadril | number:'1.2-2': locale}}</td>
-                    <td *ngIf="pointer>=0">
-                        {{+evaluation[pointer].cintura / +evaluation[pointer].quadril | number:'1.2-2': locale}}</td>
-                </tr>
-                <tr>
-                    <th i18n>Classificação</th>
-                    <td *ngIf="pointer>=1">
-                        <span *ngIf="getClasse(evaluation[pointer-1])==1">Baixo</span>
-                        <span *ngIf="getClasse(evaluation[pointer-1])==2">Moderado</span>
-                        <span *ngIf="getClasse(evaluation[pointer-1])==3">Alto</span>
-                        <span *ngIf="getClasse(evaluation[pointer-1])==4">Muito Alto</span>
-                    </td>
-                    <td *ngIf="pointer>=0">
-                        <span *ngIf="getClasse(evaluation[pointer])==1">Baixo</span>
-                        <span *ngIf="getClasse(evaluation[pointer])==2">Moderado</span>
-                        <span *ngIf="getClasse(evaluation[pointer])==3">Alto</span>
-                        <span *ngIf="getClasse(evaluation[pointer])==4">Muito Alto</span>
-                    </td>
-                </tr>
-
-            </tbody>
-        </table>
-
-        <div class="action">
-            <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default" (click)="pointer=pointer-1">
-                <mat-icon class="mat-14">chevron_left</mat-icon>
-            </button>
-            <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
-                color="default" (click)="pointer=pointer+1">
-                <mat-icon class="mat-14">chevron_right</mat-icon>
-            </button>
-        </div>
-
-        <div class="section-info">
-            <h4>Classificação de Risco</h4>
-            <table class="table">
+        <div class="section-content">
+            <h1 class="h1-title" i18n>Índice de Relação Cintura/Quadril</h1>
+            <table class="section-table">
                 <thead>
                     <tr>
-                        <th>Idade</th>
-                        <th>Baixo</th>
-                        <th>Moderado</th>
-                        <th>Alto</th>
-                        <th>Muito Alto</th>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</th>
+                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
                     </tr>
                 </thead>
-                <tbody *ngIf="student.sexo=='M'">
+                <tbody>
                     <tr>
-                        <th>20 - 29</th>
-                        <td>&lt; 0,83</td>
-                        <td>0,83 - 0,88</td>
-                        <td>0,89 - 0,94</td>
-                        <td>&gt; 0,94</td>
+                        <th i18n><span (click)="openDialog('Cintura')">Cintura <small>(cm)</small></span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cintura | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].cintura | number: '': locale}}</td>
                     </tr>
                     <tr>
-                        <th>30 - 39</th>
-                        <td>&lt; 0,84</td>
-                        <td>0,84 - 0,91</td>
-                        <td>0,92 - 0,96</td>
-                        <td>&gt; 0,96</td>
+                        <th i18n><span (click)="openDialog('Quadril')">Quadril <small>(cm)</small></span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].quadril | number: '': locale}}</td>
                     </tr>
                     <tr>
-                        <th>40 - 49</th>
-                        <td>&lt; 0,88</td>
-                        <td>0,88 - 0,95</td>
-                        <td>0,96 - 1,00</td>
-                        <td>&gt; 1,00</td>
+                        <th i18n><span (click)="openDialog('IRCQ')">IRCQ</span></th>
+                        <td *ngIf="pointer>=1">
+                            {{+evaluation[pointer-1].cintura / +evaluation[pointer-1].quadril | number:'1.2-2': locale}}
+                        </td>
+                        <td *ngIf="pointer>=0">
+                            {{+evaluation[pointer].cintura / +evaluation[pointer].quadril | number:'1.2-2': locale}}
+                        </td>
                     </tr>
                     <tr>
-                        <th>50 - 59</th>
-                        <td>&lt; 0,90</td>
-                        <td>0,90 - 0,95</td>
-                        <td>0,96 - 1,02</td>
-                        <td>&gt; 1,02</td>
+                        <th i18n>Classificação</th>
+                        <td *ngIf="pointer>=1">
+                            <span *ngIf="getClasse(evaluation[pointer-1])==1">Baixo</span>
+                            <span *ngIf="getClasse(evaluation[pointer-1])==2">Moderado</span>
+                            <span *ngIf="getClasse(evaluation[pointer-1])==3">Alto</span>
+                            <span *ngIf="getClasse(evaluation[pointer-1])==4">Muito Alto</span>
+                        </td>
+                        <td *ngIf="pointer>=0">
+                            <span *ngIf="getClasse(evaluation[pointer])==1">Baixo</span>
+                            <span *ngIf="getClasse(evaluation[pointer])==2">Moderado</span>
+                            <span *ngIf="getClasse(evaluation[pointer])==3">Alto</span>
+                            <span *ngIf="getClasse(evaluation[pointer])==4">Muito Alto</span>
+                        </td>
                     </tr>
-                    <tr>
-                        <th>60 - 69</th>
-                        <td>&lt; 0,91</td>
-                        <td>0,91 - 0,98</td>
-                        <td>0,99 - 1,03</td>
-                        <td>&gt; 1,03</td>
-                    </tr>
-                </tbody>
-                <tbody *ngIf="student.sexo=='F'">
-                    <tr>
-                        <th>20 - 29</th>
-                        <td>&lt; 0,71</td>
-                        <td>0,71 - 0,77</td>
-                        <td>0,78 - 0,82</td>
-                        <td>&gt; 0,82</td>
-                    </tr>
-                    <tr>
-                        <th>30 - 39</th>
-                        <td>&lt; 0,72</td>
-                        <td>0,72 - 0,78</td>
-                        <td>0,79 - 0,84</td>
-                        <td>&gt; 0,84</td>
-                    </tr>
-                    <tr>
-                        <th>40 - 49</th>
-                        <td>&lt; 0,73</td>
-                        <td>0,73 - 0,79</td>
-                        <td>0,80 - 0,87</td>
-                        <td>&gt; 0,87</td>
-                    </tr>
-                    <tr>
-                        <th>50 - 59</th>
-                        <td>&lt; 0,74</td>
-                        <td>0,74 - 0,81</td>
-                        <td>0,82 - 0,88</td>
-                        <td>&gt; 0,88</td>
-                    </tr>
-                    <tr>
-                        <th>60 - 69</th>
-                        <td>&lt; 0,76</td>
-                        <td>0,76 - 0,83</td>
-                        <td>0,84 - 0,90</td>
-                        <td>&gt; 0,90</td>
-                    </tr>
+
                 </tbody>
             </table>
-            <em><small> Heyward. V. & Stolarkcyz. Applied Body Composition Assessment, 1996</small></em>
-        </div>
 
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+            </div>
+
+            <div class="section-info">
+                <h4>Classificação de Risco</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Idade</th>
+                            <th>Baixo</th>
+                            <th>Moderado</th>
+                            <th>Alto</th>
+                            <th>Muito Alto</th>
+                        </tr>
+                    </thead>
+                    <tbody *ngIf="student.sexo=='M'">
+                        <tr>
+                            <th>20 - 29</th>
+                            <td>&lt; 0,83</td>
+                            <td>0,83 - 0,88</td>
+                            <td>0,89 - 0,94</td>
+                            <td>&gt; 0,94</td>
+                        </tr>
+                        <tr>
+                            <th>30 - 39</th>
+                            <td>&lt; 0,84</td>
+                            <td>0,84 - 0,91</td>
+                            <td>0,92 - 0,96</td>
+                            <td>&gt; 0,96</td>
+                        </tr>
+                        <tr>
+                            <th>40 - 49</th>
+                            <td>&lt; 0,88</td>
+                            <td>0,88 - 0,95</td>
+                            <td>0,96 - 1,00</td>
+                            <td>&gt; 1,00</td>
+                        </tr>
+                        <tr>
+                            <th>50 - 59</th>
+                            <td>&lt; 0,90</td>
+                            <td>0,90 - 0,95</td>
+                            <td>0,96 - 1,02</td>
+                            <td>&gt; 1,02</td>
+                        </tr>
+                        <tr>
+                            <th>60 - 69</th>
+                            <td>&lt; 0,91</td>
+                            <td>0,91 - 0,98</td>
+                            <td>0,99 - 1,03</td>
+                            <td>&gt; 1,03</td>
+                        </tr>
+                    </tbody>
+                    <tbody *ngIf="student.sexo=='F'">
+                        <tr>
+                            <th>20 - 29</th>
+                            <td>&lt; 0,71</td>
+                            <td>0,71 - 0,77</td>
+                            <td>0,78 - 0,82</td>
+                            <td>&gt; 0,82</td>
+                        </tr>
+                        <tr>
+                            <th>30 - 39</th>
+                            <td>&lt; 0,72</td>
+                            <td>0,72 - 0,78</td>
+                            <td>0,79 - 0,84</td>
+                            <td>&gt; 0,84</td>
+                        </tr>
+                        <tr>
+                            <th>40 - 49</th>
+                            <td>&lt; 0,73</td>
+                            <td>0,73 - 0,79</td>
+                            <td>0,80 - 0,87</td>
+                            <td>&gt; 0,87</td>
+                        </tr>
+                        <tr>
+                            <th>50 - 59</th>
+                            <td>&lt; 0,74</td>
+                            <td>0,74 - 0,81</td>
+                            <td>0,82 - 0,88</td>
+                            <td>&gt; 0,88</td>
+                        </tr>
+                        <tr>
+                            <th>60 - 69</th>
+                            <td>&lt; 0,76</td>
+                            <td>0,76 - 0,83</td>
+                            <td>0,84 - 0,90</td>
+                            <td>&gt; 0,90</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <em><small> Heyward. V. & Stolarkcyz. Applied Body Composition Assessment, 1996</small></em>
+            </div>
+        </div>
     </div>
 </div>
