--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.scss
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.scss
@@ -30,6 +30,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  &-content{
+    width: 100%;
+  }
 
   h4{
     font-weight: 600;
@@ -46,7 +49,7 @@
 }
 
 @media only screen and (min-width: 768px){
-  .section{
+  .section-content{
     width: 520px !important;
   }
   form{
