--- a/src/app/avaliation/composicao-corporal/balanca/balanca.component.scss
+++ b/src/app/avaliation/composicao-corporal/balanca/balanca.component.scss
@@ -12,6 +12,9 @@
   justify-content: flex-start;
   align-items: center;
   color: white;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     width: 100%;
@@ -56,7 +59,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .section {
+  .section-content {
     width: 520px !important;
   }
 }
