--- a/src/app/avaliation/risco/rdc/rdc.component.scss
+++ b/src/app/avaliation/risco/rdc/rdc.component.scss
@@ -12,6 +12,9 @@
   flex-direction: column !important;
   justify-content: flex-start !important;
   align-items: center !important;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     margin-top: 30px;
@@ -104,7 +107,7 @@
 @media only screen and (min-width: 768px) {
   .container {
 
-    .section {
+    .section-content{
       width: 425px !important;
     }
   }
