--- a/src/app/avaliation/risco/rddc/rddc.component.html
+++ b/src/app/avaliation/risco/rddc/rddc.component.html
@@ -1,149 +1,149 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
-        <h1 class="h1-title" i18n>Risco de Dor na Coluna</h1>
-        <form class="flex-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-subtitle i18n>Idade</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <mat-list>
-                        <mat-list-item>
-                            <mat-form-field>
-                                <input matInput [value]="age" readonly>
-                            </mat-form-field>
-                        </mat-list-item>
-                    </mat-list>
-                </mat-card-content>
-            </mat-card>
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-subtitle i18n>Com que frequência você desobedece às regras de postura?</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <mat-list>
-                        <mat-list-item>
-                            <mat-form-field>
-                                <mat-label i18n>Frequência semanal</mat-label>
-                                <mat-select #objetos="ngModel" name="objetos" 
-                                            [(ngModel)]="data.objetos" 
-                                            (selectionChange)="calcRisco(f.value)">
-                                    <mat-option value="0" i18n>Nunca</mat-option>
-                                    <mat-option value="1" i18n>1 a 2</mat-option>
-                                    <mat-option value="2" i18n>3 a 4</mat-option>
-                                    <mat-option value="3" i18n>5 a 6</mat-option>
-                                    <mat-option value="4" i18n>7 a 8</mat-option>
-                                    <mat-option value="5">&gt; 8</mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </mat-list-item>
-                    </mat-list>
-                </mat-card-content>
-            </mat-card>
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-subtitle i18n>Com que frequência faz regularmente alongamentos?</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <mat-list>
-                        <mat-list-item>
-                            <mat-form-field>
-                                <mat-label i18n>Frequência semanal</mat-label>
-                                <mat-select #alonga="ngModel" name="alonga" 
-                                            [(ngModel)]="data.alonga" 
-                                            (selectionChange)="calcRisco(f.value)">
-                                    <mat-option value="3" i18n>Não faz</mat-option>
-                                    <mat-option value="2" i18n>1 vez</mat-option>
-                                    <mat-option value="1" i18n>2 vezes</mat-option>
-                                    <mat-option value="0" i18n>3 vezes</mat-option>
-                                    <mat-option value="-1" i18n>4 ou mais</mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </mat-list-item>
-                    </mat-list>
-                </mat-card-content>
-            </mat-card>
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-subtitle i18n>Você está acima do peso recomendado?</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <mat-list>
-                        <mat-list-item>
-                            <mat-form-field>
-                                <mat-label i18n>Selecione</mat-label>
-                                <mat-select #peso="ngModel" name="peso" [(ngModel)]="data.peso" (selectionChange)="calcRisco(f.value)">
-                                    <mat-option value="0" i18n>Não</mat-option>
-                                    <mat-option value="1" i18n>0 a 2,9Kg</mat-option>
-                                    <mat-option value="2" i18n>3 a 5,9Kg</mat-option>
-                                    <mat-option value="3" i18n>6 a 7,9Kg</mat-option>
-                                    <mat-option value="4" i18n>8 a 9,5Kg</mat-option>
-                                    <mat-option value="5">&gt; 10Kg</mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </mat-list-item>
-                    </mat-list>
-                </mat-card-content>
-            </mat-card>
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-subtitle i18n>Tem hábito de fumar?</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <mat-list>
-                        <mat-list-item>
-                            <mat-radio-group aria-label="Selecione" #smoker="ngModel" name="smoker"
-                                [(ngModel)]="data.smoker" [disabled]="fumante"
-                                (change)="calcRisco(f.value)">
-                                <mat-radio-button value="1" i18n>Sim</mat-radio-button>
-                                <mat-radio-button value="0" i18n>Não</mat-radio-button>
-                            </mat-radio-group>
-                        </mat-list-item>
-                    </mat-list>
-                </mat-card-content>
-            </mat-card>
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-subtitle i18n>Você já teve dor na coluna?</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <mat-list>
-                        <mat-list-item>
-                            <mat-radio-group aria-label="Selecione" #dor="ngModel" name="dor" 
-                                            [(ngModel)]="data.dor" 
-                                            (change)="calcRisco(f.value)">
-                                <mat-radio-button value="3" i18n>Sim</mat-radio-button>
-                                <mat-radio-button value="0" i18n>Não</mat-radio-button>
-                            </mat-radio-group>
-                        </mat-list-item>
-                    </mat-list>
-                </mat-card-content>
-            </mat-card>
+        <div class="section-content">
+            <h1 class="h1-title" i18n>Risco de Dor na Coluna</h1>
+            <form class="flex-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+                <mat-card>
+                    <mat-card-header>
+                        <mat-card-subtitle i18n>Idade</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <mat-list>
+                            <mat-list-item>
+                                <mat-form-field>
+                                    <input matInput [value]="age" readonly>
+                                </mat-form-field>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-card-content>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header>
+                        <mat-card-subtitle i18n>Com que frequência você desobedece às regras de postura?
+                        </mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <mat-list>
+                            <mat-list-item>
+                                <mat-form-field>
+                                    <mat-label i18n>Frequência semanal</mat-label>
+                                    <mat-select #objetos="ngModel" name="objetos" [(ngModel)]="data.objetos"
+                                        (selectionChange)="calcRisco(f.value)">
+                                        <mat-option value="0" i18n>Nunca</mat-option>
+                                        <mat-option value="1" i18n>1 a 2</mat-option>
+                                        <mat-option value="2" i18n>3 a 4</mat-option>
+                                        <mat-option value="3" i18n>5 a 6</mat-option>
+                                        <mat-option value="4" i18n>7 a 8</mat-option>
+                                        <mat-option value="5">&gt; 8</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-card-content>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header>
+                        <mat-card-subtitle i18n>Com que frequência faz regularmente alongamentos?</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <mat-list>
+                            <mat-list-item>
+                                <mat-form-field>
+                                    <mat-label i18n>Frequência semanal</mat-label>
+                                    <mat-select #alonga="ngModel" name="alonga" [(ngModel)]="data.alonga"
+                                        (selectionChange)="calcRisco(f.value)">
+                                        <mat-option value="3" i18n>Não faz</mat-option>
+                                        <mat-option value="2" i18n>1 vez</mat-option>
+                                        <mat-option value="1" i18n>2 vezes</mat-option>
+                                        <mat-option value="0" i18n>3 vezes</mat-option>
+                                        <mat-option value="-1" i18n>4 ou mais</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-card-content>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header>
+                        <mat-card-subtitle i18n>Você está acima do peso recomendado?</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <mat-list>
+                            <mat-list-item>
+                                <mat-form-field>
+                                    <mat-label i18n>Selecione</mat-label>
+                                    <mat-select #peso="ngModel" name="peso" [(ngModel)]="data.peso"
+                                        (selectionChange)="calcRisco(f.value)">
+                                        <mat-option value="0" i18n>Não</mat-option>
+                                        <mat-option value="1" i18n>0 a 2,9Kg</mat-option>
+                                        <mat-option value="2" i18n>3 a 5,9Kg</mat-option>
+                                        <mat-option value="3" i18n>6 a 7,9Kg</mat-option>
+                                        <mat-option value="4" i18n>8 a 9,5Kg</mat-option>
+                                        <mat-option value="5">&gt; 10Kg</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-card-content>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header>
+                        <mat-card-subtitle i18n>Tem hábito de fumar?</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <mat-list>
+                            <mat-list-item>
+                                <mat-radio-group aria-label="Selecione" #smoker="ngModel" name="smoker"
+                                    [(ngModel)]="data.smoker" [disabled]="fumante" (change)="calcRisco(f.value)">
+                                    <mat-radio-button value="1" i18n>Sim</mat-radio-button>
+                                    <mat-radio-button value="0" i18n>Não</mat-radio-button>
+                                </mat-radio-group>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-card-content>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header>
+                        <mat-card-subtitle i18n>Você já teve dor na coluna?</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <mat-list>
+                            <mat-list-item>
+                                <mat-radio-group aria-label="Selecione" #dor="ngModel" name="dor" [(ngModel)]="data.dor"
+                                    (change)="calcRisco(f.value)">
+                                    <mat-radio-button value="3" i18n>Sim</mat-radio-button>
+                                    <mat-radio-button value="0" i18n>Não</mat-radio-button>
+                                </mat-radio-group>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-card-content>
+                </mat-card>
 
-            <!-- Resultado -->
-            <mat-card *ngIf="risco >= 0" class="mat-card-resultado {{classRisco}}">
-                <mat-card-header>
-                    <mat-card-title>NÍVEL DE RISCO</mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <h4>{{risco}} - 
-                    <span i18n *ngIf="risco <= 0">Muito Baixo</span>
-                    <span i18n *ngIf="risco >= 1 && risco < 5">Baixo</span>
-                    <span i18n *ngIf="risco >= 5 && risco < 9">Potencial</span>
-                    <span i18n *ngIf="risco >= 9 && risco < 13">Moderado</span>
-                    <span i18n *ngIf="risco >= 13 && risco < 17">Importante</span>
-                    <span i18n *ngIf="risco >= 17">Sério</span>
-                </h4>
-                </mat-card-content>
-            </mat-card>
+                <!-- Resultado -->
+                <mat-card *ngIf="risco >= 0" class="mat-card-resultado {{classRisco}}">
+                    <mat-card-header>
+                        <mat-card-title>NÍVEL DE RISCO</mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <h4>{{risco}} -
+                            <span i18n *ngIf="risco <= 0">Muito Baixo</span>
+                            <span i18n *ngIf="risco >= 1 && risco < 5">Baixo</span>
+                            <span i18n *ngIf="risco >= 5 && risco < 9">Potencial</span>
+                            <span i18n *ngIf="risco >= 9 && risco < 13">Moderado</span>
+                            <span i18n *ngIf="risco >= 13 && risco < 17">Importante</span>
+                            <span i18n *ngIf="risco >= 17">Sério</span>
+                        </h4>
+                    </mat-card-content>
+                </mat-card>
 
-            <div class="footer">
-                <button mat-stroked-button>
-                    Salvar
-                </button>
-            </div>
-        </form>
+                <div class="footer">
+                    <button mat-stroked-button>
+                        Salvar
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
