--- a/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
@@ -13,11 +13,22 @@
                     <mat-card-subtitle i18n="Subtitle">Instituto UKK Finlândia<br />Kukkonen-Harjula et Al - 2000m
                     </mat-card-subtitle>
                 </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> individuos com baixa condição física, obesos e idosos.</p>
+                    <p><strong>Faixa etária:</strong> 20 a 64 anos, homens e mulheres.</p>
+                    <p><strong>Objetivo:</strong> caminhar o mais rápido possivél o percurso proposto.</p>
+                </mat-card-content>
             </mat-card>
             <mat-card>
                 <mat-card-header [routerLink]="['/cureton']">
                     <mat-card-subtitle i18n="Subtitle">Cureton et Al - 1609m</mat-card-subtitle>
                 </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> crianças e jovens.</p>
+                    <p><strong>Faixa etária:</strong> 8 a 17 anos.</p>
+                    <p><strong>Objetivo:</strong> completar o percurso de 1609 metros (1 milha),
+                        correndo e/ou caminhado o mais rápido possivél. </p>
+                </mat-card-content>
             </mat-card>
         </div>
 
