--- a/src/app/services/dialogs/dialog-medidas.component.html
+++ b/src/app/services/dialogs/dialog-medidas.component.html
@@ -9,8 +9,8 @@
     <input matInput type="number" [(ngModel)]="ev.altura" placeholder="m">
   </mat-form-field>
   <mat-form-field>
-    <mat-label *ngIf="erroPeso" style="color: red;">Peso</mat-label>
-    <mat-label *ngIf="!erroPeso">Peso</mat-label>
+    <mat-label *ngIf="erroPeso" style="color: red;">Peso Corporal</mat-label>
+    <mat-label *ngIf="!erroPeso">Peso Corporal</mat-label>
     <input matInput type="number" [(ngModel)]="ev.peso" placeholder="Kg">
   </mat-form-field>
   <mat-form-field class="input-sm">
