--- a/src/app/avaliation/CardioPulmunar/cureton/cureton.component.html
+++ b/src/app/avaliation/CardioPulmunar/cureton/cureton.component.html
@@ -1,7 +1,8 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
-        <h1 class="h1-title" i18n>Cureton et Al, (1995) - 1609m</h1>
+        <div class="section-content">
+        <h1 class="h1-title" i18n>Cureton et al, (1995) - 1609m</h1>
         <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
             <input type="hidden" name="nafs" #nafs="ngModel" [ngModel]="newEvaluation.nafs">
             <input type="hidden" name="altura" #altura="ngModel" [ngModel]="newEvaluation.altura">
@@ -27,17 +28,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n>Tempo final</th>
+                        <th i18n>Tempo final <small>(m:s)</small></th>
                         <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].c_tempo | mask: '00:00'}}</td>
                         <td *ngIf="editPointer==1 && editAv">
-                            <input mask="00:00" name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" placeholder="mm:ss" (focus)="$event.target.select()">
+                            <input mask="00:00" name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" 
+                             (focus)="$event.target.select()" [showMaskTyped] = "true">
                         </td>
                         <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].c_tempo | mask: '00:00'}}</td>
                         <td *ngIf="editPointer==0 && editAv">
-                            <input mask="00:00" name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" placeholder="mm:ss" (focus)="$event.target.select()">
+                            <input mask="00:00" name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" 
+                             (focus)="$event.target.select()" [showMaskTyped] = "true">
                         </td>
                         <td *ngIf="addEval">
-                            <input mask="00:00" name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" placeholder="mm:ss">
+                            <input mask="00:00" name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo"  [showMaskTyped] = "true">
                         </td>
                     </tr>
                     <tr>
@@ -56,8 +59,8 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('IMC')">IMC</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].imc | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].imc | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].imc | number: '1.0-1': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].imc | number: '1.0-1': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <!--  resultados -->
@@ -141,7 +144,7 @@
         </div>
 
         <div class="section-info">
-            <mat-card>
+<!--             <mat-card>
                 <mat-card-header>
                     <mat-card-title>Especificações</mat-card-title>
                 </mat-card-header>
@@ -151,8 +154,8 @@
                     <p><strong>Objetivo:</strong> completar o percurso de 1609 metros (1 milha),
                         correndo e/ou caminhado o mais rápido possivél. </p>
                 </mat-card-content>
-            </mat-card>
+            </mat-card> -->
         </div>
     </div>
-
+</div>
 </div>
