--- a/src/app/avaliation/CardioPulmunar/george/george.component.scss
+++ b/src/app/avaliation/CardioPulmunar/george/george.component.scss
@@ -12,6 +12,9 @@
   justify-content: flex-start;
   align-items: center;
   color: white;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     width: 100%;
@@ -44,7 +47,7 @@
     width: 90% !important;
     margin: auto;
   }
-  .section-info{
-    width: 60%;
+  .section-content{
+    width: 520px;
   }
 }
