--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
@@ -3,20 +3,38 @@
     <div class="section">
         <h1 class="h1-title" i18n>Testes de Corrida</h1>
         <div class="section-cards">
-            <mat-card>
-                <mat-card-header [routerLink]="['/cooper']">
+            <mat-card [routerLink]="['/cooper']">
+                <mat-card-header>
                     <mat-card-subtitle i18n="Subtitle">Cooper - 12min</mat-card-subtitle>
                 </mat-card-header>
             </mat-card>
-            <mat-card>
-                <mat-card-header [routerLink]="['/george']">
+            <mat-card [routerLink]="['/george']">
+                <mat-card-header>
                     <mat-card-subtitle i18n="Subtitle">George et Al - 1609m</mat-card-subtitle>
                 </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
+                    <p><strong>Faixa etária:</strong> 18 a 29 anos.</p>
+                    <p><strong>Objetivo:</strong> Correr num ritmo confortável e moderado com o tempo de prova de 8
+                        minutos
+                        para homens e 9 minutos para mulher. A FC deve ser medida no final do teste e não deverá
+                        ultrapassar as 180bpm.</p>
+                </mat-card-content>
             </mat-card>
-            <mat-card>
-                <mat-card-header [routerLink]="['/george2']">
+            <mat-card [routerLink]="['/george2']">
+                <mat-card-header>
                     <mat-card-subtitle i18n="Subtitle">George et Al - 3min</mat-card-subtitle>
                 </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
+                    <p><strong>Faixa etária:</strong> 18 a 28 anos.</p>
+                    <p><strong>Objetivo:</strong> Este protocolo é constituido por um aquecimento de 3 minutos
+                        (caminhada rápida) e
+                        em seguida ajusta-se a velocidade (auto selecionada) para correr num ritmo confortável entre 6.9
+                        a 12Km/h,
+                        não ultrapassando os 10.4Km/h no caso de mulheres ou 12Km/h no caso de homens, por mais 3
+                        minutos</p>
+                </mat-card-content>
             </mat-card>
         </div>
 
