--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
@@ -20,7 +20,7 @@
   width: 100%;
   margin: auto;
 }
-
+/* 
 .mat-card{
   height: 30px;
   background-color:  rgba(119, 107, 107, 0.788);
@@ -30,6 +30,32 @@
     font-size: 16px;
     font-weight: unset;
     color: white;
+  }
+} */
+
+.mat-card{
+  min-height: 30px;
+  background-color:  rgba(119, 107, 107, 0.788);
+  margin-bottom: 3px;
+
+
+
+  .mat-card-subtitle{
+    text-align: center;
+    font-size: 16px;
+    font-weight: unset;
+    color: white;
+  }
+  .mat-card-content{
+    margin-left: 16px;
+    font-size: small;
+    line-height: 0.8;
+    color: white;
+  }
+}
+::ng-deep{
+    .mat-card-header-text{
+    width: 100% !important;
   }
 }
 
