--- a/src/app/services/dialogs/dialog-cardio/dialog-cardio.component.scss
+++ b/src/app/services/dialogs/dialog-cardio/dialog-cardio.component.scss
@@ -2,4 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: black;
+}
+.mat-form-field-appearance-legacy .mat-form-field-label {
+    color: unset;
 }
